header tweaks to prevent mobile spacing issues

--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -32,4 +32,9 @@
       margin-bottom: 0;
     }
   }
+
+  figure {
+    margin-left: -2rem;
+    margin-right: -2rem;
+  }
 }
